2006-01-10 Juris Kalnins <juris@mt.lv>

	* bgpd.h: (bgp_router_id_unset) ex-function, remove.
	
2005-11-23 Paul Jakma <paul.jakma@sun.com>

	* bgp_aspath.c: (assegments_parse) should be static

2005-11-23 Juergen Kammer <j.kammer@eurodata.de>

	* bgp_aspath.c: (aspath_cmp_left_confed) fix SEGV for case
	  where one or both paths are empty.

2005-11-14 Paul Jakma <paul.jakma@sun.com>

	* bgp_route.c: (bgp_process_rsclient) convert to new workqueue
          specs and shut up gcc, which complains about cast from void
          via function parameters, for some dumb reason. Do the cast
          inside the function instead.
          (bgp_process_main,bgp_processq_del) ditto.
          (bgp_clear_route_node) ditto.
          (bgp_clear_node_queue_del) ditto.

2005-11-03 Paul Jakma <paul.jakma@sun.com>

	* bgp_damp.c: (bgp_reuse_timer) struct bgp can be retrieved via
	  the struct bgp_damp_info, no need to guess by using
	  bgp_get_default().

2005-10-01 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* bgp_vty.c: (bgp_config_write_redistribute) Use new library function
	  zebra_route_string instead of a local hard-coded table.

2005-09-30 Vincent Jardin <vincent.jardin@6wind.com>

	* bgp_packet.c: fix compilation when DEBUG is used.

2005-09-10 Paul Jakma <paul.jakma@sun.com>

	* Makefile.am: bgpd shouldn't list libgp's sources as its own.
	  Use LDADD.
	* bgp_aspath.h:	
	  (struct assegment) New struct, abstract representation of a
	  list of AS_PATH segments and the contained ASNs.	  
	  (struct aspath) Remove the raw-data related
	  fields, reference the abstract struct assegment instead. 
	  Remove several other computed fields, it's just a
	  headache to maintain them and they're cheap to compute from
	  struct assegment.
	  (aspath_parse) parse a stream, not a pointer to raw data.
	  (aspath_count_{hops,confeds,size}) helpers to access
	  information formerly directly contained in struct aspath.
	  (aspath_snmp_pathseg) Helper for SNMP, BGP MIB wants